# Sous-chef

./: .gitignore  .gitmodules  README.md  hr.from.josipantolis.souschef.yml  meson.build
data/: Application.css  gresource.xml  gschema.xml  meson.build  souschef.desktop.in  souschef.metainfo.xml.in  souschef.service.in  style.css
data/sql/: 01_create_tables.sql  02_insert_common_tags.sql  02_populate_tables.sql
po/: hr.from.josipantolis.souschef.pot  meson.build
po/extra/: POTFILES  extra.pot  meson.build
src/: Application.vala  Consts.vala.in  MainWindow.vala  main.vala  meson.build
src/Models/: Amount.vala  AmountConverter.vala  AmountParser.vala  Ingredient.vala  IngredientGroup.vala  ParsingError.vala  Recipe.vala  RecipeParser.vala  Tag.vala  Unit.vala  Units.vala
src/Models/Converters/: AmountConverter.vala  CompositeAmountConverter.vala  IdentityAmountConverter.vala  MassToVolumeAmountConverter.vala  MultiplierBasedAmountConverter.vala  PreferenceBasedAmountConverter.vala  ReferentUnitRationBasedAmountConverter.vala
src/Services/: ConverterService.vala  DatabaseError.vala  DatabaseService.vala  RecipesService.vala  ServiceError.vala
src/Views/: LibraryView.vala  RecipeView.vala
src/Widgets/: EditableIngredient.vala  EditableIngredientGroups.vala  EditableLabel.vala  EditableTitle.vala  LibraryView.vala  RecipeHeader.vala  RecipeView.vala  TagPill.vala  TagsRow.vala
test/: main.vala  meson.build
test/Models/: ConversionTests.vala  ParsingTests.vala
